--- a/examples/Library_explorer.html
+++ b/examples/Library_explorer.html
@@ -11793,7 +11793,7 @@ div#notebook {
 
 <span class="kn">import</span> <span class="nn">sys</span><span class="o">,</span> <span class="nn">os</span>
 <span class="n">sys</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s2">&quot;/home/eric/PycharmProjects/PyFDD&quot;</span><span class="p">)</span>
-<span class="kn">from</span> <span class="nn">pyfdd</span> <span class="k">import</span> <span class="n">lib2dl</span>
+<span class="kn">from</span> <span class="nn">pyfdd</span> <span class="k">import</span> <span class="n">Lib2dl</span>
 </pre></div>
 
 </div>
@@ -11817,7 +11817,7 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span class="n">analysis_path</span> <span class="o">=</span> <span class="s2">&quot;/home/eric/cernbox/University/CERN-projects/Betapix/Analysis/Channeling_analysis/&quot;</span>
 <span class="n">lib_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">analysis_path</span><span class="p">,</span> <span class="s2">&quot;FDD_libraries/GaN_89Sr/ue567g54.2dl&quot;</span><span class="p">)</span>
-<span class="n">lib</span> <span class="o">=</span> <span class="n">lib2dl</span><span class="p">(</span><span class="n">lib_path</span><span class="p">)</span>
+<span class="n">lib</span> <span class="o">=</span> <span class="n">Lib2dl</span><span class="p">(</span><span class="n">lib_path</span><span class="p">)</span>
 <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">lib</span><span class="o">.</span><span class="n">sim_list</span><span class="p">,</span>
                   <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;Spectrum number&quot;</span><span class="p">,</span>
                            <span class="s2">&quot;Spectrum_description&quot;</span><span class="p">,</span>
