fixes to example notebooks

--- a/examples/notebook_fitman_two_site_fit.html
+++ b/examples/notebook_fitman_two_site_fit.html
@@ -11875,7 +11875,7 @@ for i in range(0, len(axis_names)):
     fm.set_minimization_settings(profile=&#39;fine&#39;)
     
     # Set a pattern or range of patterns to fit
-    P1 = np.array((1,))   # single site
+    P1 = np.array([1])   # single site
     P2 = np.arange(1,249) # range - one more than the last
     
     # Run fits 
