--- a/examples/notebook_dp_tpxquad.html
+++ b/examples/notebook_dp_tpxquad.html
@@ -11654,10 +11654,8 @@ ul.typeahead-list > li > a {
 .highlight .mh { color: #666666 } /* Literal.Number.Hex */
 .highlight .mi { color: #666666 } /* Literal.Number.Integer */
 .highlight .mo { color: #666666 } /* Literal.Number.Oct */
-.highlight .sa { color: #BA2121 } /* Literal.String.Affix */
 .highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
 .highlight .sc { color: #BA2121 } /* Literal.String.Char */
-.highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */
 .highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
 .highlight .s2 { color: #BA2121 } /* Literal.String.Double */
 .highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
@@ -11668,11 +11666,9 @@ ul.typeahead-list > li > a {
 .highlight .s1 { color: #BA2121 } /* Literal.String.Single */
 .highlight .ss { color: #19177C } /* Literal.String.Symbol */
 .highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
-.highlight .fm { color: #0000FF } /* Name.Function.Magic */
 .highlight .vc { color: #19177C } /* Name.Variable.Class */
 .highlight .vg { color: #19177C } /* Name.Variable.Global */
 .highlight .vi { color: #19177C } /* Name.Variable.Instance */
-.highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
 <style type="text/css">
@@ -11726,7 +11722,9 @@ body {
 div#notebook {
   overflow: visible;
   border-top: none;
-}@media print {
+}
+
+@media print {
   div.cell {
     display: block;
     page-break-inside: avoid;
@@ -11747,7 +11745,7 @@ div#notebook {
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -11771,7 +11769,8 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11785,9 +11784,19 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+<div class=" highlight hl-ipython3"><pre><span class="c1">#import sys</span>
+<span class="c1">#sys.path.append(&quot;/home/eric/PycharmProjects/PyFDD&quot;)</span>
 <span class="kn">from</span> <span class="nn">pyfdd</span> <span class="k">import</span> <span class="n">DataPattern</span>
 <span class="kn">from</span> <span class="nn">ecsli_tools</span> <span class="k">import</span> <span class="o">*</span>
+
+<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">import</span> <span class="nn">os</span>
+
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_rows&#39;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_columns&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -11800,7 +11809,7 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">filename1</span> <span class="o">=</span> <span class="s2">&quot;/home/user/path/to/pattern_1.txt&quot;</span>
+<div class=" highlight hl-ipython3"><pre><span class="n">filename1</span> <span class="o">=</span> <span class="s2">&quot;/home/user/path/to/pattern_1.txt&quot;</span>
 <span class="n">filename2</span> <span class="o">=</span> <span class="s2">&quot;/home/user/path/to/pattern_2.txt&quot;</span>
 <span class="n">filename</span> <span class="o">=</span> <span class="s2">&quot;/home/eric/cernbox/Betapix_CERN/2016/2016-04_Mg/raw002/pattern_d3_Npix0-50.txt&quot;</span>
 </pre></div>
@@ -11810,7 +11819,8 @@ div#notebook {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11825,7 +11835,7 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dp1</span> <span class="o">=</span> <span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename1</span><span class="p">,</span> <span class="n">nChipsX</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">nChipsY</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">real_size</span><span class="o">=</span><span class="mi">3</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span class="n">dp1</span> <span class="o">=</span> <span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename1</span><span class="p">,</span> <span class="n">nChipsX</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">nChipsY</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">real_size</span><span class="o">=</span><span class="mi">3</span><span class="p">)</span>
 <span class="n">dp2</span> <span class="o">=</span> <span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename2</span><span class="p">,</span> <span class="n">nChipsX</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">nChipsY</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="n">real_size</span><span class="o">=</span><span class="mi">3</span><span class="p">)</span>
 <span class="n">dp</span> <span class="o">=</span> <span class="n">dp1</span> <span class="o">+</span> <span class="n">dp2</span>
 </pre></div>
@@ -11835,7 +11845,8 @@ div#notebook {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11848,7 +11859,7 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Manipulation methods</span>
+<div class=" highlight hl-ipython3"><pre><span class="c1"># Manipulation methods</span>
 
 <span class="c1"># Mask</span>
 <span class="n">mask</span> <span class="o">=</span> <span class="n">load_tpxquad_mask</span><span class="p">(</span><span class="s2">&quot;/home/user/path/to/detector_mask.txt&quot;</span><span class="p">)</span>
@@ -11885,9 +11896,7 @@ div#notebook {
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>warning removed edge pixels increased to  6
@@ -11901,7 +11910,8 @@ final_size 63
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11914,7 +11924,7 @@ final_size 63
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">matplotlib</span> notebook
+<div class=" highlight hl-ipython3"><pre><span class="o">%</span><span class="k">matplotlib</span> notebook
 <span class="n">fg</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">()</span>
 <span class="n">ax</span> <span class="o">=</span> <span class="n">fg</span><span class="o">.</span><span class="n">add_subplot</span><span class="p">(</span><span class="s1">&#39;111&#39;</span><span class="p">)</span>
 <span class="n">dp</span><span class="o">.</span><span class="n">draw</span><span class="p">(</span><span class="n">ax</span><span class="p">,</span> <span class="n">percentiles</span><span class="o">=</span><span class="p">(</span><span class="mf">0.04</span><span class="p">,</span> <span class="mf">0.99</span><span class="p">))</span>
@@ -11930,17 +11940,15 @@ final_size 63
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
 
 
 
 
-
-<div id="8d97ee70-6756-4342-9f5e-bfed9c378030"></div>
+<div id="ad7f6e8f-4bf8-4cbc-89c9-19c5d7ab51c2"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#8d97ee70-6756-4342-9f5e-bfed9c378030');
+var element = $('#ad7f6e8f-4bf8-4cbc-89c9-19c5d7ab51c2');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
@@ -12717,9 +12725,7 @@ if (IPython.notebook.kernel != null) {
 </div>
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 
 <div class="output_html rendered_html output_subarea ">
@@ -12729,9 +12735,7 @@ if (IPython.notebook.kernel != null) {
 </div>
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>296
@@ -12748,7 +12752,7 @@ if (IPython.notebook.kernel != null) {
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s1">&#39;angle widget, center &#39;</span><span class="p">,</span> <span class="n">dp</span><span class="o">.</span><span class="n">center</span><span class="p">,</span> <span class="s1">&#39;, angle &#39;</span><span class="p">,</span> <span class="n">dp</span><span class="o">.</span><span class="n">angle</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span class="nb">print</span><span class="p">(</span><span class="s1">&#39;angle widget, center &#39;</span><span class="p">,</span> <span class="n">dp</span><span class="o">.</span><span class="n">center</span><span class="p">,</span> <span class="s1">&#39;, angle &#39;</span><span class="p">,</span> <span class="n">dp</span><span class="o">.</span><span class="n">angle</span><span class="p">)</span>
 <span class="c1"># set_fit_region uses the angular values from the orientation </span>
 <span class="c1"># but these can also be set in the function input</span>
 <span class="n">dp</span><span class="o">.</span><span class="n">set_fit_region</span><span class="p">(</span><span class="n">distance</span><span class="o">=</span><span class="mf">2.8</span><span class="p">)</span>
@@ -12763,9 +12767,7 @@ if (IPython.notebook.kernel != null) {
 
 
 <div class="output_area">
-
 <div class="prompt"></div>
-
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>angle widget, center  [-0.19003281651089932, 0.25193144367662024] , angle  -178.37502364247524
@@ -12777,7 +12779,8 @@ if (IPython.notebook.kernel != null) {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -12790,7 +12793,7 @@ if (IPython.notebook.kernel != null) {
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dp</span><span class="o">.</span><span class="n">io_save_json</span><span class="p">(</span><span class="s1">&#39;/home/user/quad_datapattern.json&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span class="n">dp</span><span class="o">.</span><span class="n">io_save_json</span><span class="p">(</span><span class="s1">&#39;/home/user/quad_datapattern.json&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
