--- a/examples/notebook_dp_pad.html
+++ b/examples/notebook_dp_pad.html
@@ -11784,9 +11784,8 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span class="c1">#import sys</span>
-<span class="c1">#sys.path.append(&quot;/home/eric/PycharmProjects/PyFDD&quot;)</span>
-<span class="kn">from</span> <span class="nn">pyfdd</span> <span class="k">import</span> <span class="n">DataPattern</span>
+<div class=" highlight hl-ipython3"><pre><span class="kn">import</span> <span class="nn">pyfdd</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;PyFDD version&#39;</span><span class="p">,</span> <span class="n">pyfdd</span><span class="o">.</span><span class="n">__version__</span><span class="p">)</span>
 
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -11833,8 +11832,8 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span class="n">dp1</span> <span class="o">=</span> <span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename1</span><span class="p">)</span>
-<span class="n">dp2</span> <span class="o">=</span> <span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename2</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span class="n">dp1</span> <span class="o">=</span> <span class="n">pyfdd</span><span class="o">.</span><span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename1</span><span class="p">)</span>
+<span class="n">dp2</span> <span class="o">=</span> <span class="n">pyfdd</span><span class="o">.</span><span class="n">DataPattern</span><span class="p">(</span><span class="n">file_path</span><span class="o">=</span><span class="n">filename2</span><span class="p">)</span>
 <span class="n">dp</span> <span class="o">=</span> <span class="n">dp1</span> <span class="o">+</span> <span class="n">dp2</span>
 </pre></div>
 
@@ -11920,10 +11919,10 @@ div#notebook {
 
 
 
-<div id="abb0dabd-e4fb-4ce5-b8a5-bbbe2ac1c36a"></div>
+<div id="3346b8fd-d148-4329-9773-9021f4b460c8"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#abb0dabd-e4fb-4ce5-b8a5-bbbe2ac1c36a');
+var element = $('#3346b8fd-d148-4329-9773-9021f4b460c8');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
