--- a/examples/notebook_fitman_two_site_fit.html
+++ b/examples/notebook_fitman_two_site_fit.html
@@ -11784,9 +11784,8 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span class="c1">#import sys</span>
-<span class="c1">#sys.path.append(&quot;/home/eric/PycharmProjects/PyFDD&quot;)</span>
-<span class="kn">from</span> <span class="nn">pyfdd</span> <span class="k">import</span> <span class="n">FitManager</span>
+<div class=" highlight hl-ipython3"><pre><span class="kn">import</span> <span class="nn">pyfdd</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;PyFDD version&#39;</span><span class="p">,</span> <span class="n">pyfdd</span><span class="o">.</span><span class="n">__version__</span><span class="p">)</span>
 
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -11857,7 +11856,7 @@ for i in range(0, len(axis_names)):
     # The number of subpixels used in the past has been 6 for the pad
     # for the timepix depending on the number of added pixels in the DataPattern 
     # is set to half the number of added pixels
-    fm = FitManager(cost_function=&#39;chi2&#39;, sub_pixels=2)
+    fm = pyfdd.FitManager(cost_function=&#39;chi2&#39;, sub_pixels=2)
     
     # Set the pattern and library to fit with
     fm.set_pattern(filename, library)
