added display command

--- a/examples/notebook_dp_tpxquad.html
+++ b/examples/notebook_dp_tpxquad.html
@@ -11793,6 +11793,8 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
+<span class="kn">from</span> <span class="nn">IPython.display</span> <span class="k">import</span> <span class="n">display</span>
+
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_rows&#39;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_columns&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span>
@@ -11944,10 +11946,10 @@ final_size 63
 
 
 
-<div id="0151b0b4-2178-4e99-946a-f30c7c0bb292"></div>
+<div id="84c1bb18-c5c8-47a2-a008-ed8f4d4ea6c7"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#0151b0b4-2178-4e99-946a-f30c7c0bb292');
+var element = $('#84c1bb18-c5c8-47a2-a008-ed8f4d4ea6c7');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
