--- a/examples/notebook_dp_pad.html
+++ b/examples/notebook_dp_pad.html
@@ -11792,6 +11792,8 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
+<span class="kn">from</span> <span class="nn">IPython.display</span> <span class="k">import</span> <span class="n">display</span>
+
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_rows&#39;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_columns&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span>
@@ -11919,10 +11921,10 @@ div#notebook {
 
 
 
-<div id="3346b8fd-d148-4329-9773-9021f4b460c8"></div>
+<div id="f09a3532-6470-466b-80c4-dc51fc0d523e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#3346b8fd-d148-4329-9773-9021f4b460c8');
+var element = $('#f09a3532-6470-466b-80c4-dc51fc0d523e');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
