--- a/examples/notebook_fitman_multiple_site_fit.html
+++ b/examples/notebook_fitman_multiple_site_fit.html
@@ -11792,6 +11792,8 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
+<span class="kn">from</span> <span class="nn">IPython.display</span> <span class="k">import</span> <span class="n">display</span>
+
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_rows&#39;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_columns&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span>
@@ -11939,7 +11941,7 @@ FitManager.get_pattern_from_best_fit(normalization=None):</code></pre>
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span class="n">fm</span><span class="o">.</span><span class="n">df</span>
+<div class=" highlight hl-ipython3"><pre><span class="n">display</span><span class="p">(</span><span class="n">fm</span><span class="o">.</span><span class="n">df_vertical</span><span class="p">)</span>
 </pre></div>
 
 </div>
