orientation now uses cw and cc instead of rr and rl

--- a/examples/notebook_dp_pad.html
+++ b/examples/notebook_dp_pad.html
@@ -14341,8 +14341,8 @@ a.anchor-link {
 
 <span class="c1"># Manipulation methods</span>
 <span class="c1"># -Orient</span>
-<span class="n">dp</span><span class="o">.</span><span class="n">manip_orient</span><span class="p">(</span><span class="s1">&#39;rr&#39;</span><span class="p">)</span>  <span class="c1"># PAD6 orientation</span>
-<span class="c1"># use &#39;rr&#39;,&#39;rl&#39;,&#39;mh&#39;,mv&#39; for rotate right, rotate left, mirror horizontal and mirror vertical</span>
+<span class="n">dp</span><span class="o">.</span><span class="n">manip_orient</span><span class="p">(</span><span class="s1">&#39;cw&#39;</span><span class="p">)</span>  <span class="c1"># PAD6 orientation</span>
+<span class="c1"># use &#39;cw&#39;,&#39;cc&#39;,&#39;mh&#39;,mv&#39; for rotate clockwise, rotate counterclockwise, mirror horizontal and mirror vertical</span>
 <span class="c1"># in the desired order</span>
 
 <span class="c1"># Mask</span>
@@ -14401,9 +14401,9 @@ a.anchor-link {
 
 
 
-<div id="9bfb2de3-828a-43b9-9a6b-5def9b5d9156" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
+<div id="b68d9731-8f9d-42ef-ad75-eff37f0d3966" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
 <script type="text/javascript">
-var element = document.getElementById('9bfb2de3-828a-43b9-9a6b-5def9b5d9156');
+var element = document.getElementById('b68d9731-8f9d-42ef-ad75-eff37f0d3966');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
