--- a/examples/notebook_dp_tpxquad.html
+++ b/examples/notebook_dp_tpxquad.html
@@ -14349,9 +14349,9 @@ a.anchor-link {
 <span class="n">dp</span><span class="o">.</span><span class="n">mask_std</span><span class="p">(</span><span class="mi">4</span><span class="p">)</span>
 
 <span class="c1"># -Orient</span>
-<span class="c1"># use &#39;rr&#39;,&#39;rl&#39;,&#39;mh&#39;,mv&#39; for rotate right, rotate left, mirror horizontal and mirror vertical</span>
+<span class="c1"># use &#39;cw&#39;,&#39;cc&#39;,&#39;mh&#39;,mv&#39; for rotate clockwise, rotate counterclockwise, mirror horizontal and mirror vertical</span>
 <span class="c1"># in the desired order</span>
-<span class="n">dp</span><span class="o">.</span><span class="n">manip_orient</span><span class="p">(</span><span class="s1">&#39;rl,mh&#39;</span><span class="p">)</span>  <span class="c1"># TimepixQuad orientation</span>
+<span class="n">dp</span><span class="o">.</span><span class="n">manip_orient</span><span class="p">(</span><span class="s1">&#39;cc, mh&#39;</span><span class="p">)</span>  <span class="c1"># TimepixQuad orientation</span>
 
 <span class="c1"># -Angular calibration</span>
 <span class="n">dp</span><span class="o">.</span><span class="n">manip_create_mesh</span><span class="p">(</span><span class="n">pixel_size</span><span class="o">=</span><span class="mf">0.055</span><span class="p">,</span> <span class="n">distance</span><span class="o">=</span><span class="mi">315</span><span class="p">)</span>
@@ -14431,9 +14431,9 @@ final_size 63
 
 
 
-<div id="524c9b59-2e26-4f36-8bc3-8947fa4d2080" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
+<div id="2e6ca44a-ac75-4dce-9eb0-0b88aa6cbb5a" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
 <script type="text/javascript">
-var element = document.getElementById('524c9b59-2e26-4f36-8bc3-8947fa4d2080');
+var element = document.getElementById('2e6ca44a-ac75-4dce-9eb0-0b88aa6cbb5a');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
